# MDMC_Internship_Project_Zuppa

./: .gitignore  CHANGELOG.md  DATA_AVAILABILITY_STATEMENT.md  LICENSE  README.md  pyproject.toml
docs/: registries_schema.md
notebooks/: classify_CAS_claude.ipynb  classify_DAS_claude.ipynb  clean_sections.ipynb  compute_clusters.ipynb  compute_embeddings.ipynb  debug_skip_mechanism.ipynb  descriptive_statistics.ipynb  extract_sections.ipynb  extract_text.ipynb  ingest_data.ipynb  metadata_querying.ipynb  model_testing.ipynb  stat_analysis_CAS.ipynb  stat_analysis_DAS.ipynb  visualize_CAS_results.ipynb  visualize_DAS_classifications.ipynb
src/application/: main.py  pipeline.py  utils.py
src/config/: CAS_prompt.txt  classification_schema_CAS_ETA.yaml  classification_schema_CAS_MCA.yaml  classification_schema_DAS.yaml  config.py  config.yaml
